attempt z-index fix on show-menu item

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,5 +78,6 @@ input[type=checkbox]:checked ~ #menu{
   }
   .show-menu {
       display:block;
+      z-index: 999;
   }
 }
